# KalmanFilter

./: CMakeLists.txt  README.md
include/: SimulateImuData.h  kalmanfilter.h
src/: SimulateImuData.cpp  kalmanfilter.cpp  main.cpp
